added important dates information and call for papers page content

--- a/app/data/topics.yaml
+++ b/app/data/topics.yaml
@@ -59,6 +59,7 @@
   - task and requirements analysis
   - metrics and benchmarks
   - 'evaluations of all types: qualitative, quantitative, laboratory, field, and usability studies'
+  - use of eye tracking and other biometric measures
   - validation and verification
   - perception theory including such factors as color texture, scene, motion perception, perceptual cognition
 
