--- a/app/data/dates.yaml
+++ b/app/data/dates.yaml
@@ -7,6 +7,12 @@
   '2nd Cycle Notification': 'Jan. 28, 2017'
   'Camera Ready Paper Due': 'Feb. 8, 2017'
 
+'notes':
+  'Visualization Note Submission Deadline': 'Dec. 13, 2016, 11:59pm (PST)'
+  'Visualization Note Notification': 'Jan. 20, 2017'
+  'Camera Ready Visualization Note Due': 'Feb. 1, 2017'
+    
 'upcoming':
-  'Full Paper Abstract Due': 'Sep. 28, 2016, 11:59pm (PDT)'
+  'Visualization Note Due': 'Dec. 13, 2016, 11:59pm (PST)'
   'Full Paper Due': 'Oct. 5, 2016, 11:59pm (PDT)'
+  'Full Paper Abstract Due': 'Sep. 28, 2016, 11:59pm (PDT)'
