--- a/db/data.yml
+++ b/db/data.yml
@@ -1,54 +1,5 @@
 
 ---
-sponsors:
-  columns:
-  - id
-  - position
-  - name
-  - url
-  - sponsor_type
-  - created_at
-  - updated_at
-  - thumbnail_file_name
-  - thumbnail_content_type
-  - thumbnail_file_size
-  - thumbnail_updated_at
-  records: 
-  - - 1
-    - 0
-    - IEEE
-    - https://www.ieee.org
-    - Organizer
-    - '2016-05-31 04:21:38.343733'
-    - '2016-05-31 04:21:38.343733'
-    - sponsors_ieee.png
-    - image/png
-    - 3379
-    - '2016-05-31 04:21:38.320275'
-  - - 2
-    - 1
-    - IEEE VGTC
-    - http://vgtc.org/
-    - Organizer
-    - '2016-05-31 04:22:00.678858'
-    - '2016-05-31 04:22:00.678858'
-    - sponsors_vgtc.png
-    - image/png
-    - 4754
-    - '2016-05-31 04:22:00.673174'
-  - - 3
-    - 2
-    - IEEE Computer Society
-    - http://computer.org/
-    - Organizer
-    - '2016-05-31 04:22:27.220361'
-    - '2016-05-31 04:22:27.220361'
-    - sponsors_ieeecs.png
-    - image/png
-    - 6261
-    - '2016-05-31 04:22:27.214715'
-
----
 admin_users:
   columns:
   - id
@@ -71,13 +22,144 @@ admin_users:
     - 
     - 
     - 
-    - 12
-    - '2016-07-05 05:33:45.012853'
-    - '2016-07-05 05:30:47.114225'
-    - 147.46.242.28
-    - 147.46.242.28
+    - 20
+    - '2016-11-02 15:32:48.346817'
+    - '2016-10-25 13:42:45.425142'
+    - 110.34.97.140
+    - 221.146.6.177
     - '2016-05-30 08:28:16.169676'
-    - '2016-07-05 05:33:45.014415'
+    - '2016-11-02 15:32:48.348026'
+
+---
+chair_assignments:
+  columns:
+  - id
+  - chair_group_id
+  - chair_id
+  - position
+  - created_at
+  - updated_at
+  records: 
+  - - 1
+    - 1
+    - 1
+    - 0
+    - '2016-05-31 09:12:04.789941'
+    - '2016-05-31 09:12:04.789941'
+  - - 2
+    - 1
+    - 2
+    - 1
+    - '2016-05-31 09:16:52.026536'
+    - '2016-05-31 09:16:52.026536'
+  - - 5
+    - 4
+    - 6
+    - 0
+    - '2016-06-13 03:40:35.888153'
+    - '2016-06-13 03:40:35.888153'
+  - - 6
+    - 4
+    - 7
+    - 1
+    - '2016-06-13 03:40:35.889354'
+    - '2016-06-13 03:40:35.889354'
+  - - 7
+    - 5
+    - 8
+    - 0
+    - '2016-06-13 03:41:05.390849'
+    - '2016-06-13 03:41:05.390849'
+  - - 8
+    - 5
+    - 9
+    - 1
+    - '2016-06-13 03:41:05.392034'
+    - '2016-06-13 03:41:05.392034'
+  - - 13
+    - 3
+    - 3
+    - 0
+    - '2016-06-13 09:13:50.159127'
+    - '2016-06-13 09:13:50.159127'
+  - - 14
+    - 3
+    - 4
+    - 1
+    - '2016-06-13 09:13:50.160702'
+    - '2016-06-13 09:13:50.160702'
+  - - 15
+    - 3
+    - 5
+    - 2
+    - '2016-06-13 09:13:50.161944'
+    - '2016-06-13 09:13:50.161944'
+  - - 17
+    - 2
+    - 12
+    - 0
+    - '2016-06-13 09:21:36.977002'
+    - '2016-06-13 09:21:36.977002'
+  - - 18
+    - 2
+    - 10
+    - 1
+    - '2016-06-13 09:21:36.979163'
+    - '2016-06-13 09:21:36.979163'
+  - - 19
+    - 2
+    - 11
+    - 2
+    - '2016-06-13 09:21:36.980507'
+    - '2016-06-13 09:21:36.980507'
+  - - 20
+    - 6
+    - 13
+    - 
+    - '2016-07-01 07:34:00.935191'
+    - '2016-07-01 07:34:00.935191'
+  - - 21
+    - 7
+    - 15
+    - 
+    - '2016-07-01 08:11:30.107660'
+    - '2016-07-01 08:11:30.107660'
+  - - 22
+    - 8
+    - 14
+    - 
+    - '2016-07-01 08:11:41.931993'
+    - '2016-07-01 08:11:41.931993'
+  - - 23
+    - 8
+    - 16
+    - 
+    - '2016-08-12 05:59:20.153398'
+    - '2016-08-12 05:59:20.153398'
+  - - 24
+    - 8
+    - 17
+    - 
+    - '2016-08-25 06:19:01.599381'
+    - '2016-08-25 06:19:01.599381'
+  - - 25
+    - 9
+    - 18
+    - 
+    - '2016-11-02 15:37:05.405576'
+    - '2016-11-02 15:37:05.405576'
+  - - 26
+    - 9
+    - 19
+    - 
+    - '2016-11-02 15:37:05.407685'
+    - '2016-11-02 15:37:05.407685'
+  - - 27
+    - 9
+    - 20
+    - 
+    - '2016-11-02 15:37:05.409443'
+    - '2016-11-02 15:37:05.409443'
 
 ---
 chair_groups:
@@ -90,44 +172,49 @@ chair_groups:
   records: 
   - - 1
     - General Conference Co-Chairs
-    - pvis2017
+    - pvis2017@pvis.org
     - '2016-05-31 09:09:58.296083'
-    - '2016-07-01 07:39:49.563126'
+    - '2016-07-05 06:40:57.725854'
   - - 2
     - Papers Co-Chairs
-    - papers
+    - papers@pvis.org
     - '2016-06-13 01:30:23.430345'
-    - '2016-07-01 07:39:39.889272'
+    - '2016-07-05 06:40:53.638854'
   - - 3
     - PacificVAST Co-Chairs
-    - vast
+    - vast@pvis.org
     - '2016-06-13 03:39:57.288696'
-    - '2016-07-01 07:39:34.149779'
+    - '2016-07-05 06:40:49.094872'
   - - 4
     - Visualization Notes Co-Chairs
-    - note
+    - note@pvis.org
     - '2016-06-13 03:40:35.886784'
-    - '2016-07-01 07:39:28.219660'
+    - '2016-07-05 06:40:44.617961'
   - - 5
     - Posters Co-Chairs
-    - posters
+    - posters@pvis.org
     - '2016-06-13 03:41:05.389689'
-    - '2016-07-01 07:39:22.817671'
+    - '2016-07-05 06:40:39.277832'
   - - 6
     - Webmaster & Design Chair
-    - ''
+    - info@hcil.snu.ac.kr
     - '2016-07-01 07:32:35.552413'
-    - '2016-07-01 08:07:52.685580'
+    - '2016-07-05 06:51:01.921268'
   - - 7
     - Finance Chair
-    - ''
+    - hjsong@hcil.snu.ac.kr
     - '2016-07-01 08:11:30.106123'
-    - '2016-07-01 08:11:30.106123'
+    - '2016-07-05 06:41:30.704226'
   - - 8
     - Publicity Chair
+    - publicity@pvis.org
+    - '2016-07-01 08:11:41.930533'
+    - '2016-08-27 11:43:25.192525'
+  - - 9
+    - Visual Storytelling Contest Co-Chairs
     - ''
-    - '2016-07-01 08:11:41.930533'
-    - '2016-07-01 08:11:41.930533'
+    - '2016-11-02 15:33:06.256357'
+    - '2016-11-02 15:33:06.256357'
 
 ---
 chairs:
@@ -293,107 +380,56 @@ chairs:
     - image/jpeg
     - 37520
     - '2016-07-01 08:10:58.717740'
-
----
-chair_assignments:
-  columns:
-  - id
-  - chair_group_id
-  - chair_id
-  - position
-  - created_at
-  - updated_at
-  records: 
-  - - 1
-    - 1
-    - 1
-    - 0
-    - '2016-05-31 09:12:04.789941'
-    - '2016-05-31 09:12:04.789941'
-  - - 2
-    - 1
-    - 2
-    - 1
-    - '2016-05-31 09:16:52.026536'
-    - '2016-05-31 09:16:52.026536'
-  - - 5
-    - 4
-    - 6
-    - 0
-    - '2016-06-13 03:40:35.888153'
-    - '2016-06-13 03:40:35.888153'
-  - - 6
-    - 4
-    - 7
-    - 1
-    - '2016-06-13 03:40:35.889354'
-    - '2016-06-13 03:40:35.889354'
-  - - 7
-    - 5
-    - 8
-    - 0
-    - '2016-06-13 03:41:05.390849'
-    - '2016-06-13 03:41:05.390849'
-  - - 8
-    - 5
-    - 9
-    - 1
-    - '2016-06-13 03:41:05.392034'
-    - '2016-06-13 03:41:05.392034'
-  - - 13
-    - 3
-    - 3
-    - 0
-    - '2016-06-13 09:13:50.159127'
-    - '2016-06-13 09:13:50.159127'
-  - - 14
-    - 3
-    - 4
-    - 1
-    - '2016-06-13 09:13:50.160702'
-    - '2016-06-13 09:13:50.160702'
-  - - 15
-    - 3
-    - 5
-    - 2
-    - '2016-06-13 09:13:50.161944'
-    - '2016-06-13 09:13:50.161944'
+  - - 16
+    - GuHyun Han
+    - ghhan@hcil.snu.ac.kr
+    - Seoul National University
+    - '2016-08-12 05:59:03.608806'
+    - '2016-08-12 05:59:03.608806'
+    - e72c991cd22817b4badd57338cb892b00001d8b6.jpg
+    - image/jpeg
+    - 11627
+    - '2016-08-12 05:59:03.027601'
   - - 17
-    - 2
-    - 12
-    - 0
-    - '2016-06-13 09:21:36.977002'
-    - '2016-06-13 09:21:36.977002'
+    - Siming Chen
+    - simingchen3@gmail.com
+    - Peking University
+    - '2016-08-25 06:18:43.631980'
+    - '2016-08-25 06:18:43.631980'
+    - 제목_없음-1.jpg
+    - image/jpeg
+    - 41231
+    - '2016-08-25 06:18:43.202727'
   - - 18
-    - 2
-    - 10
-    - 1
-    - '2016-06-13 09:21:36.979163'
-    - '2016-06-13 09:21:36.979163'
+    - Ivan Viola
+    - viola@cg.tuwien.ac.at
+    - Vienna University of Technology
+    - '2016-11-02 15:34:30.615261'
+    - '2016-11-02 15:41:50.712923'
+    - IvanViola200px.jpg
+    - image/jpeg
+    - 42699
+    - '2016-11-02 15:41:50.641746'
   - - 19
-    - 2
-    - 11
-    - 2
-    - '2016-06-13 09:21:36.980507'
-    - '2016-06-13 09:21:36.980507'
+    - Kyungwon Lee
+    - kwlee@ajou.ac.kr
+    - Ajou University
+    - '2016-11-02 15:35:54.543752'
+    - '2016-11-02 15:41:33.471164'
+    - 200311010.jpg
+    - image/jpeg
+    - 95402
+    - '2016-11-02 15:41:33.369475'
   - - 20
-    - 6
-    - 13
-    - 
-    - '2016-07-01 07:34:00.935191'
-    - '2016-07-01 07:34:00.935191'
-  - - 21
-    - 7
-    - 15
-    - 
-    - '2016-07-01 08:11:30.107660'
-    - '2016-07-01 08:11:30.107660'
-  - - 22
-    - 8
-    - 14
-    - 
-    - '2016-07-01 08:11:41.931993'
-    - '2016-07-01 08:11:41.931993'
+    - Matthew Brehmer
+    - mabrehme@microsoft.com
+    - Microsoft Research
+    - '2016-11-02 15:36:47.778775'
+    - '2016-11-02 15:36:47.778775'
+    - SXbteWgP.jpg
+    - image/jpeg
+    - 32796
+    - '2016-11-02 15:36:47.584071'
 
 ---
 previous_conferences:
@@ -401,61 +437,140 @@ previous_conferences:
   - id
   - year
   - location
+  - country
   - url
+  - from
+  - to
   - created_at
   - updated_at
   records: 
   - - 1
     - 2016
     - Taipei
+    - TW
     - http://graphics07.csie.ntust.edu.tw/graphics/Vis_2016/
+    - '2016-04-19'
+    - '2016-04-22'
     - '2016-07-05 05:35:45.719727'
-    - '2016-07-05 05:35:45.719727'
+    - '2016-07-05 06:23:04.885679'
   - - 2
     - 2015
     - Hangzhou
+    - CN
     - http://www.cad.zju.edu.cn/home/pvis2015/
+    - '2015-04-14'
+    - '2015-04-17'
     - '2016-07-05 05:36:14.656818'
-    - '2016-07-05 05:36:14.656818'
+    - '2016-07-05 06:22:34.341409'
   - - 3
     - 2014
     - Yokohama
+    - JP
     - http://www.fj.ics.keio.ac.jp/pvis2014/guideline_v.html
+    - '2014-03-04'
+    - '2014-03-07'
     - '2016-07-05 05:36:54.405990'
-    - '2016-07-05 05:36:54.405990'
+    - '2016-07-05 06:22:13.438900'
   - - 4
     - 2013
     - Sydney
+    - AU
     - http://sydney.edu.au/engineering/it/groups/visual/pvis2013/welcome/index.php
+    - '2013-02-26'
+    - '2013-03-01'
     - '2016-07-05 05:37:56.855676'
-    - '2016-07-05 05:37:56.855676'
+    - '2016-07-05 06:21:58.714415'
   - - 5
     - 2012
-    - Songdo, Incheon
+    - Songdo
+    - KR
     - http://hcil.snu.ac.kr/PacificVis2012
+    - '2012-02-28'
+    - '2012-03-02'
     - '2016-07-05 05:38:14.541721'
-    - '2016-07-05 05:38:33.470359'
+    - '2016-07-05 06:21:40.368292'
   - - 6
     - 2011
     - Hong Kong
+    - HK
     - http://i.cs.hku.hk/~pvis2011/
+    - '2011-03-01'
+    - '2011-03-04'
     - '2016-07-05 05:38:57.102550'
-    - '2016-07-05 05:38:57.102550'
+    - '2016-07-05 06:21:20.353048'
   - - 7
     - 2010
     - Taipei
+    - TW
     - http://graphics.csie.ntu.edu.tw/pvis2010/
+    - '2010-03-02'
+    - '2010-03-05'
     - '2016-07-05 05:39:15.907007'
-    - '2016-07-05 05:39:15.907007'
+    - '2016-07-05 06:21:01.962993'
   - - 8
     - 2009
     - Beijing
+    - CN
     - http://vis.pku.edu.cn/pvs2009/
+    - '2009-04-20'
+    - '2009-04-23'
     - '2016-07-05 05:39:39.458516'
-    - '2016-07-05 05:39:39.458516'
+    - '2016-07-05 06:20:41.657379'
   - - 9
     - 2008
     - Kyoto
+    - JP
     - http://www.viz.media.kyoto-u.ac.jp/conf/pvis2008/
+    - '2008-03-04'
+    - '2008-03-07'
     - '2016-07-05 05:39:58.107646'
-    - '2016-07-05 05:39:58.107646'
+    - '2016-07-05 06:20:21.596740'
+
+---
+sponsors:
+  columns:
+  - id
+  - position
+  - name
+  - url
+  - sponsor_type
+  - created_at
+  - updated_at
+  - thumbnail_file_name
+  - thumbnail_content_type
+  - thumbnail_file_size
+  - thumbnail_updated_at
+  records: 
+  - - 1
+    - 0
+    - IEEE
+    - https://www.ieee.org
+    - Organizer
+    - '2016-05-31 04:21:38.343733'
+    - '2016-05-31 04:21:38.343733'
+    - sponsors_ieee.png
+    - image/png
+    - 3379
+    - '2016-05-31 04:21:38.320275'
+  - - 3
+    - 2
+    - IEEE Computer Society
+    - http://computer.org/
+    - Organizer
+    - '2016-05-31 04:22:27.220361'
+    - '2016-05-31 04:22:27.220361'
+    - sponsors_ieeecs.png
+    - image/png
+    - 6261
+    - '2016-05-31 04:22:27.214715'
+  - - 4
+    - 
+    - IEEE VGTC
+    - http://vgtc.org/
+    - Organizer
+    - '2016-10-25 13:43:28.990631'
+    - '2016-10-25 13:43:28.990631'
+    - sponsors_vgtc.png
+    - image/png
+    - 4754
+    - '2016-10-25 13:43:28.929969'
